Added links to Scala and SBT download. Clarified sbt_opts for compile